--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "binding",
-  "version": "0.0.0",
-  "description": "",
-  "main": "test.js",
+  "name": "zergling.js",
+  "version": "0.0.1",
+  "description": "Ember.js like binding, one way binding and computed properties for Backbone",
+  "main": "zergling.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test"
   },
   "author": "Ribao Wei",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "backbone": "~1.1.0"
   }
